- Critters can now have karma spent on improving their abilities without having to save and then reload their file.
- Creating certain improvements no longer causes Chummer to crash.
- Adding and/or removing lifestyle qualities no longer generates orphaned improvements.
- Encumbrance penalties and maximum skill ratings can now properly be modified through the Character Settings window.

Changed/New Strings:
- Checkbox_Options_SpecializationsBreakSkillGroups
- MessageTitle_ExtraNativeLanguages
- Message_ExtraNativeLanguages

Removed Strings:
- Message_UnderLanguageLimit

Build 222
Application Changes:
- Changing AGI or STR values now properly updates movement speeds in the UI.
- Cyberware and bioware with pair bonuses and/or wireless pair bonuses but no `<pairinclude>` or `<wirelesspairinclude>` nodes specified now still have those bonuses applied properly for every pair of item.
- The default Internet Explorer version emulated for the character sheet viewer is now 11 instead of 8.
- Fixed a rare crash that could happen when attempting to print a character.
- Changelogs for newer versions of Chummer now properly show up in the updater before they are downloaded.
- Fixed a rare crash when attempting to convert certain colors to and/or from their dark mode versions.
- Startup times for users with watch folders has been decreased by about 20%.
- Fixed an issue where some cyberware with wireless bonuses that depend on either the presence of other cyberware or on there being multiple instances of the same cyberware would cause that cyberware's bonuses to mysteriously disappear.
- Barehanded Adept now properly allows characters to learn spells with a Touch or Touch (Area) range.
- Spells bought as part of Barehanded Adept are now marked as such in exports.