@@ -88,7 +88,6 @@ namespace Chummer
             this.lstCyberware.Name = "lstCyberware";
             this.tlpMain.SetRowSpan(this.lstCyberware, 3);
             this.lstCyberware.Size = new System.Drawing.Size(297, 417);
-            this.lstCyberware.Sorted = true;
             this.lstCyberware.TabIndex = 0;
             this.lstCyberware.SelectedIndexChanged += new System.EventHandler(this.lstCyberware_SelectedIndexChanged);
             this.lstCyberware.DoubleClick += new System.EventHandler(this.lstCyberware_DoubleClick);
